tests/ppapi_browser/bad/nacl.scons
# -*- python -*-
# Copyright (c) 2011 The Native Client Authors.  All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

Import('env')

# TODO(robertm): those should not be necessary once we go -std=c99
env.FilterOut(CFLAGS=['-pedantic'])
env.FilterOut(CCFLAGS=['-pedantic'])

bad_target = ('ppapi_bad_%s.nexe' % env.get('TARGET_FULLARCH'))
env.ComponentProgram(bad_target,
                     ['ppapi_bad.cc'],
                     EXTRA_LIBS=['${PPAPI_LIBS}',
                                 'platform',
                                 'pthread',
                                 'gio'])

# Note that the html and a .nmf manifest is required to run this program.
env.Publish(bad_target, 'run', [
    'ppapi_bad.html',
    'ppapi_bad_crossorigin.nmf',
    'ppapi_bad_doesnotexist.nmf',
    'ppapi_bad_magic.nmf',
    'ppapi_bad_nexe.nmf',
    '${SCONSTRUCT_DIR}/tools/browser_tester/browserdata/nacltest.js',
])

node = env.PPAPIBrowserTester(
    'ppapi_bad_browser_test.out',
    url='ppapi_bad.html',
    files=env.ExtractPublishedFiles(bad_target),
    args=['--allow_404'])

env.AddNodeToTestSuite(node,
                       ['chrome_browser_tests'],
                       'run_ppapi_bad_browser_test',
                       is_broken=env.PPAPIBrowserTesterIsBroken())

